BugFix: wrong padding

--- a/src/Resources/public/admin-lte/css/style.css
+++ b/src/Resources/public/admin-lte/css/style.css
@@ -588,7 +588,7 @@ img.rounded-circle {
 }
 
 .btn-group-sm > .btn, .btn-sm {
-    padding: .25rem 0.25rem;
+    padding: .25rem 0.5rem;
 }
 
 .DateAttribute.atkbutton {
